--- a/포트폴리오 페이지/css/demo.css
+++ b/포트폴리오 페이지/css/demo.css
@@ -83,6 +83,45 @@
   top: 0;
 }
 
+.democontent div {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 100px;
+  height: 100px;
+}
+
+.democontent:hover div {
+  display: block;
+}
+
+.democontent div svg {
+  opacity: .5;
+  display: none;
+  width: 100px;
+  height: 100px;
+  fill: #111;
+}
+
+.democontent div:hover svg {
+  opacity: .7;
+}
+
+.democontent div:hover svg path {
+  fill: #888;
+}
+
+.democontent div.play #play {
+  display: block;
+}
+
+.democontent div.pause #pause {
+  display: block;
+}
+
 #opendemo {
   width: 250px;
   bottom: 0;
